<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!--Page names-->
    <string name="app_name">Currency Converter</string>
    <string name="page_1">Converter</string>
    <!--<string name="page_2">Saved Conversions</string>-->
    <string name="page_3">Help &amp; About</string>

    <!--Content headings-->
    <string name="heading_currencyToConvert">Currency to convert to</string>
    <string name="heading_amountConverted">Amount</string>
    <string name="heading_aboutApp">About the app</string>
    <string name="heading_useOfApp">Directions for use</string>
    <string name="heading_baseCurrency">GBP £</string>

    <!--Page content-->
    <string name="content_aboutApp">This currency converter app uses the latest exchange rates provided by the European Central Bank, which are updated at around 15:00 GMT every day - excluding weekends and select holidays throughout the year.\nCurrently, the app is using exchange rates from:</string>
    <string name="content_directionsOfUse">To use the converter, simply tap on the user-entry field on the main page and enter an amount to convert in British Pounds.\n\nThen select a currency to convert to from the drop-down list and press the Convert button.\n\nTo reset the app ready for another conversion, select the Clear Results icon at the top, next to the help button.\n\nTo retrieve the latest exchange rates, go to the overflow menu and select Update Exchange Rates. </string>
    <string name="content_convertedValueText"><xliff:g example="£" id="relevantCurrencySymbol">%s</xliff:g> <xliff:g example="1" id="exchangedValue">%f</xliff:g></string>

    <!--Actions, button & prompt labels-->
    <string name="action_refresh">Update exchange rates</string>
    <!--<string name="action_navigate">Saved conversions</string>-->
    <string name="action_help">Help &amp; about</string>
    <string name="action_resetContent">Clear results</string>
    <string name="button_convert">Convert</string>
    <!--<string name="button_saveConversion">Save Conversion</string>-->
    <string name="prompt_amountEntry">Enter amount to convert</string>

    <!--Error messages & notifications-->
    <string name="error_noConnectivity">No Internet connection.</string>
    <string name="error_noDataResults">No exchange rates found.</string>
    <string name="error_dataLoading">An error occurred - please try again later.</string>
    <string name="error_invalidChar">Enter a number</string>
    <string name="message_loadingData">Loading data, please wait a moment.</string>
    <string name="message_dataLoaded">Data successfully retrieved.</string>

    <!--Symbols for currencies-->
    <string name="symbol_AUD">$</string>
    <string name="symbol_BGN">лв</string>
    <string name="symbol_BRL">R$</string>
    <string name="symbol_CAD">$</string>
    <string name="symbol_CNY">¥</string>
    <string name="symbol_CZK">Kč</string>
    <string name="symbol_DKK">kr</string>
    <string name="symbol_EUR">€</string>
    <string name="symbol_GBP">£</string>
    <string name="symbol_HKD">$</string>
    <string name="symbol_HRK">kn</string>
    <string name="symbol_HUF">Ft</string>
    <string name="symbol_IDR">Rp</string>
    <string name="symbol_ILS">₪</string>
    <string name="symbol_INR">₹</string>
    <string name="symbol_ISK">kr</string>
    <string name="symbol_JPY">¥</string>
    <string name="symbol_KRW">₩</string>
    <string name="symbol_MXN">$</string>
    <string name="symbol_MYR">RM</string>
    <string name="symbol_NOK">kr</string>
    <string name="symbol_NZD">$</string>
    <string name="symbol_PHP">₱</string>
    <string name="symbol_PLN">zł</string>
    <string name="symbol_RON">lei</string>
    <string name="symbol_RUB">₽</string>
    <string name="symbol_SEK">kr</string>
    <string name="symbol_SGD">$</string>
    <string name="symbol_THB">฿</string>
    <string name="symbol_TRY">₺</string>
    <string name="symbol_USD">$</string>
    <string name="symbol_ZAR">R</string>

    <string name="accessibility_gbpFlag">GBP Flag</string>
    <string name="accessibility_flagIcon">Currency flag icon</string>
</resources>
