<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--Refresh icon, retrieves latest conversion figures-->
    <item
        android:id="@+id/action_resetContent"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:title="@string/action_resetContent"
        app:showAsAction="ifRoom" />

    <!--"Saved Conversions" page navigation button, should appear as button if possible-->
    <!--<item-->
        <!--android:id="@+id/action_conversionNav"-->
        <!--android:icon="@drawable/ic_list_white_24dp"-->
        <!--android:title="@string/action_navigate"-->
        <!--app:showAsAction="ifRoom" />-->

    <!--Help button-->
    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_help_white_24dp"
        android:title="@string/action_help"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="never"/>
</menu>