<?xml version="1.0" encoding="utf-8"?>
<!--Having the main layout as a ScrollView allows the app the automatically provide the user with
scrolling capabilities if the contents overflow the screen.-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.zacmurphy.currencyconverter.HelpActivity">

    <!--The main structure for the content on the page, to be structured in a vertical order-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <!--First heading-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heading_aboutApp"
            style="@style/HeadingLarge"/>

        <!--First content-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/content_aboutApp"
            style="@style/Content"/>

        <!--Date of exchange rates being used-->
        <TextView
            android:id="@+id/exchangeRateDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            style="@style/Content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorAccent" />

        <!--Second heading-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/heading_useOfApp"
            style="@style/HeadingLarge"/>

        <!--Second content-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/content_directionsOfUse"
            style="@style/Content"/>
    </LinearLayout>
</ScrollView>